VR: Wait until compositor receives an omnibox-less frame to render content.

The first few frames received after entering VR could still contain the
browser-compositor-drawn omnibox texture, so we have to wait until we get a
frame without that (using the content offset as a proxy to know when the
omnibox is gone).

Bug: 807647
Change-Id: Ib9119aacaefe653c09c80da553305e79d14a2413
Reviewed-on: https://chromium-review.googlesource.com/934404
Reviewed-by: Yash Malik <ymalik@chromium.org>
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538813}
Former-commit-id: fc06748f65cc2b14d93488b89300068242a7f459