chrome/browser/android/vr_shell/vr_gl_thread.cc
@@ -29,14 +29,16 @@ VrGLThread::VrGLThread(
     gvr_context* gvr_api,
     const UiInitialState& ui_initial_state,
     bool reprojected_rendering,
-    bool daydream_support)
+    bool daydream_support,
+    bool pause_content)
     : base::android::JavaHandlerThread("VrShellGL"),
       weak_vr_shell_(weak_vr_shell),
       main_thread_task_runner_(std::move(main_thread_task_runner)),
       gvr_api_(gvr_api),
       ui_initial_state_(ui_initial_state),
       reprojected_rendering_(reprojected_rendering),
-      daydream_support_(daydream_support) {}
+      daydream_support_(daydream_support),
+      pause_content_(pause_content) {}
 
 VrGLThread::~VrGLThread() {
   Stop();
@@ -83,7 +85,7 @@ void VrGLThread::Init() {
 
   vr_shell_gl_ = std::make_unique<VrShellGl>(
       this, std::move(ui), gvr_api_, reprojected_rendering_, daydream_support_,
-      ui_initial_state_.in_web_vr);
+      ui_initial_state_.in_web_vr, pause_content_);
 
   weak_browser_ui_ = vr_shell_gl_->GetBrowserUiWeakPtr();
 
